--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Welcome</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1>About Us</h1>
+							<p class="major">
+								We develop and apply analytical and computational methods to study soft matter - i.e. substances held together 
+								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, granular materials, 
+								surfactants, membranes, biomaterials (e.g. DNA, proteins and lipids) and their composites - from a molecular and nanoscale 
+								perspective. Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in 
+								areas including health and renewable energy. To inspire this work and to stimulate research in real systems we often work closely 
+								with experimentalists.
+							</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
