--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h1>About Us</h1>
 							<p class="major">
 								We develop and apply analytical and computational methods to study soft matter - i.e. substances held together 
-								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, granular materials, 
+								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, 
 								surfactants, membranes, biomaterials (e.g. DNA, proteins and lipids) and their composites - from a molecular and nanoscale 
 								perspective. Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in 
 								areas including health and renewable energy. To inspire this work and to stimulate research in real systems we often work closely 
