--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<p class="major">
 								We develop and apply analytical and computational methods to study soft matter - i.e. substances held together 
 								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, 
-								surfactants, membranes, biomaterials (e.g. DNA, proteins and lipids) and their composites - from a molecular and nanoscale 
+								surfactants, membranes, biomaterials (e.g. DNAs, proteins and lipids) and their composites - from a molecular and nanoscale 
 								perspective. Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in 
 								areas including health and renewable energy. To inspire this work and to stimulate research in real systems we often work closely 
 								with experimentalists.
@@ -83,7 +83,7 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
+							<h2>Selected Publications</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 						</div>
 
