--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Phoretic transports</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>
+								Phoretic transport represents the motion of colloids/molecules in fluids as well as the fluid 
+								flow near solid surfaces induced by a electric field, a concentration gradient or  a temperature 
+								gradient (i.e. electro-/diffusio-/thermo-phoresis and electro-/diffusio-/thermo-osmosis). The phoretic transport 
+								processes offer important advantages in fields as diverse as micro-/nano-fluidics, 
+								colloid science and separations because of the controllable processes may be achieved through 
+								surface structure and chemistry.
+							</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
