--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>About Us</h1>
+							<h1>Yawei Liu</h1>
 							<p class="major">
 								We develop and apply analytical and computational methods to study soft matter - i.e. substances held together 
 								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, 
