--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</div>
 					</section>
 
-				<!-- Six -->
+				<!-- News -->
 				<section class="wrapper style1 align-center">
 					<!-- Gallery -->
 						<div class="gallery style2 medium lightbox onscroll-fade-in">
@@ -293,28 +293,37 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
-									<h3>About Yawei Liu</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Links</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3><a href="files/CV_yawei.pdf">CV</a></h3>
+									<p>
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
-									<h3>Publication Lists</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Publications</h3>
+									<p>
+										Most of our publications can be download from <a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate.</a>  <br />
+										Publication lists is <a href= >here.</a> <br />
+										<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a>
+									</p>
+								</section>
+								<section>
+									<span class="icon solid style2 major fa-film"></span>
+									<h3>Posters</h3>
+									<p>
+										Posters are <a href= >here.</a>
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
 									<h3>Research Notes</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>We share our research experiences <a href= >here.</a></p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
 									<h3>In-House Codes</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>
+										In-house codes can be found <a href= >here.</a>
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
@@ -327,19 +336,11 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-paper-plane"></span>
-									<h3>Positions</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
 									<span class="icon solid style2 major fa-envelope"></span>
 									<h3>Contatct Us</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-tree"></span>
-									<h3>Acknowledgements</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>
+										<h4>E-mail: <a href="yawei.liu@sydney.edu.au">yawei.liu@sydney.edu.au</a></h4>
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-plane"></span>
@@ -347,9 +348,23 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
+									<span class="icon solid style2 major fa-tree"></span>
+									<h3>Acknowledgements</h3>
+									<p>Thanks to ...</p>
+								</section>
+								<section>
 									<span class="icon style2 major fa-chart-bar"></span>
-									<h3>Statistics</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>N/A</h3>
+									<p>
+
+									</p>
+								</section>
+								<section>
+									<span class="icon solid style2 major fa-wifi"></span>
+									<h3>N/A</h3>
+									<p>
+
+									</p>
 								</section>
 							</div>
 						</div>
@@ -358,9 +373,6 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
 							<p>&copy; Yawei Liu Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
