--- a/index.html
+++ b/index.html
@@ -286,10 +286,6 @@
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Resources</h2>
-							<p>
-
-							</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
@@ -298,77 +294,76 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-save"></span>
-									<h3>Publications</h3>
+									<span class="icon solid style2 major fa-bars"></span>
+									<h3><a href=>Publications</a></h3>
 									<p>
-										Most of our publications can be download from <a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate.</a>  <br />
-										Publication lists is <a href= >here.</a> <br />
-										<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a>
+										
 									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-film"></span>
-									<h3>Posters</h3>
+									<span class="icon solid style2 major fa-chalkboard"></span>
+									<h3><a href=>Posters</a></h3>
 									<p>
-										Posters are <a href= >here.</a>
 									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-desktop"></span>
-									<h3>Research Notes</h3>
-									<p>We share our research experiences <a href= >here.</a></p>
+									<span class="icon solid style2 major fa-edit"></span>
+									<h3><a href=>Research Notes</a></h3>
+									<p>
+
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
-									<h3>In-House Codes</h3>
+									<h3><a href=>In-House Codes</a></h3>
 									<p>
-										In-house codes can be found <a href= >here.</a>
 									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-cog"></span>
-									<h3>Softwares/Pakages</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<span class="icon solid style2 major fa-drafting-compass"></span>
+									<h3><a href=>Softwares/Pakages</a></h3>
+									<p>
+
+									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-sync-alt"></span>
-									<h3>Cooperation</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<span class="icon solid style2 major fa-code-branch"></span>
+									<h3>External Links</h3>
+									<p>
+										<a href=https://orcid.org/0000-0002-0230-0109>ORCID</a> <br />
+										<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> 
+									</p>
+								</section>
+								<section>
+									<span class="icon solid style2 major fa-box"></span>
+									<h3>Archieves</h3>
+									<p>
+
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-envelope"></span>
 									<h3>Contatct Us</h3>
 									<p>
-										<h4>E-mail: <a href="yawei.liu@sydney.edu.au">yawei.liu@sydney.edu.au</a></h4>
-									</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-plane"></span>
-									<h3>News Archieves</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-tree"></span>
-									<h3>Acknowledgements</h3>
-									<p>Thanks to ...</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-chart-bar"></span>
-									<h3>N/A</h3>
-									<p>
-
-									</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>N/A</h3>
-									<p>
-
+										<h4>E-mail: <a href="mailto:yawei.liu@sydney.edu.au">yawei.liu@sydney.edu.au</a></h4>
+										<h4>Address: Chemistry Building (F11), The University of Sydney, Sydney, New South Wales 2006, Australia</h4>
 									</p>
 								</section>
 							</div>
 						</div>
 					</section>
+
+				<!-- Acknowledgements -->
+				<footer class="wrapper style1 align-center">
+					<div class="inner">
+						<h3>Acknowledgements</h3>
+						<p>I gratefully acknowledge the guidance from Prof. Xianren Zhang (张现仁教授) (PhD supervisor), <a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel (PhD supervisor)</a>, 
+							<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Dr. Asaph Widmer-Cooper (Postdoc supervisor)</a> in my studies and researches.
+						   I also owe a special debt of gratitude to Prof. WenChuan Wang （汪文川教授） who help me a lot in my academic caree.
+						   I also express my gratitude to all of my collaborators in my reseachres.
+						</p>
+					</div>
+				</footer>
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
