--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</p>
 							<h2>Research interests</h2>
 							<p class="major">
-								My Research is focused on developing and applying analytical and computational methods to study soft matter - i.e. substances held together 
+								Our Research is focused on developing and applying analytical and computational methods to study soft matter - i.e. substances held together 
 								by relatively weak non-covalent interactions, such as liquids, liquid crystals, polymers, gels, colloids, 
 								surfactants, membranes, biomaterials (e.g. DNAs, proteins and lipids) and their composites - from a molecular and nanoscale 
 								perspective. Such studies are relevant for our fundamental understanding of matter and the design of novel materials with applications in 
