--- a/index.html
+++ b/index.html
@@ -216,6 +216,12 @@
 
 					</section>
 
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Honours and Awards</h2>
+						</div>
+					</section>
+
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
@@ -260,7 +266,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-code-branch"></span>
+									<span class="icon solid style2 major fa-kiwi-bird"></span>
 									<h3>Learning Resources</h3>
 									<p>
 										
