--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 								<h4>E-mail: <a href="mailto:yawei.liu@sydney.edu.au">yawei.liu@sydney.edu.au</a></h4>
 							</li>
 						</ul>
-						<p>&copy; Yaiwei Liu' research blog. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p>&copy; Yaiwei Liu' Research Blog. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</div>
 				</footer>
 
