--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								(<a href="files/CV_yawei.pdf">中文简历</a>) <br />
 								<a href=https://orcid.org/0000-0002-0230-0109>ORCID</a>
 								<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> 
-								<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/yawei-liu.html>USdy</a>
+								<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/yawei-liu.html>USyd</a>
 								<a href=https://excitonscience.com/users/dr-yawei-liu>ACEx</a> 
 							</p>
 							<h2>Research interests</h2>
