--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Molecule/Nano-material Self-Assembly</h2>
+							<h2>Molecule/Nanomaterial Self-Assembly</h2>
 							<p>
 								Self-assembly describes the processes by which individual units come together to form organized 
 								structures, mediated by individual particle interactions or globally applied external forces such 
