--- a/index.html
+++ b/index.html
@@ -156,12 +156,6 @@
 
 					</section>
 
-					<section class="wrapper style1 align-center">
-						<div class="inner">
-							<h2>Honours and Awards</h2>
-						</div>
-					</section>
-
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
@@ -174,20 +168,20 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-chalkboard"></span>
-									<h3><a href=>Posters</a></h3>
+									<span class="icon solid style2 major fa-chalkboard-teacher"></span>
+									<h3><a href=>Presentations & Posters</a></h3>
 									<p>
 									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-chalkboard-teacher"></span>
-									<h3><a href=>Presentations</a></h3>
+									<span class="icon solid style2 major fa-sync"></span>
+									<h3><a href=>Academic Visiting</a></h3>
 									<p>
 									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-edit"></span>
-									<h3><a href=>Notes</a></h3>
+									<h3><a href=>Research Notes</a></h3>
 									<p>
 
 									</p>
@@ -201,7 +195,7 @@
 								
 								<section>
 									<span class="icon solid style2 major fa-users"></span>
-									<h3><a href=>Academic-tree</a></h3>
+									<h3><a href=>Academic Tree</a></h3>
 									<p>
 									</p>
 								</section>
