--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync"></span>
-									<h3><a href=>Academic Visiting</a></h3>
+									<h3><a href=>Academic Activies</a></h3>
 									<p>
 									</p>
 								</section>
