--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dr. Yawei Liu</title>
+		<title>Dr Yawei Liu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Yawei Liu (刘亚伟)</h1>
+							<h1>Dr Yawei Liu (刘亚伟)</h1>
 							<h2>Biographical details</h2>
 							<p class="major">
 								I am a Postdoctoral Researcher at the University of Sydney 
