--- a/index.html
+++ b/index.html
@@ -191,12 +191,40 @@
 								</article>
 
 								<article>
+									<a href="images/selected_papers/thermoosmosis2018_abstract.png" class="image">
+										<img src="images/selected_papers/thermoosmosis2018.png" alt="" />
+									</a>
+									<div class="caption">
+										<h4>Hamiltonian Transformation to Compute Thermo-osmotic Forces. 
+											R Ganti, Y Liu, D Frenkel – Phys. Rev. Lett. 121, 068002 (2018). 
+										</h4>
+										<ul class="actions fixed">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+
+								<article>
 									<a href="images/selected_papers/marangoni2017_abstract.png" class="image">
 										<img src="images/selected_papers/marangoni2017.png" alt="" />
 									</a>
 									<div class="caption">
 										<h4>Microscopic Marangoni flows cannot be predicted on the basis of pressure gradients. 
 											Y Liu, R Ganti, HGA Burton, X Zhang, W Wang, D Frenkel – Phys. Rev. Lett. 119, 224502 (2017).
+										</h4>
+										<ul class="actions fixed">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+
+								<article>
+									<a href="images/selected_papers/thermoosmosis2017_abstract.png" class="image">
+										<img src="images/selected_papers/thermoosmosis2017.png" alt="" />
+									</a>
+									<div class="caption">
+										<h4>Molecular simulation of thermo-osmotic slip. 
+											R Ganti, Y Liu, D. Frenkel – Phys. Rev. Lett. 119, 038002 (2017).
 										</h4>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
