--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								I am a Postdoctoral Researcher at the University of Sydney 
 								(<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Dr. Asaph Widmer-Cooper's group</a>,2017.09-). 
 								Prior to this I was a Master/PhD student at Beijing University 
-								of Chemical Technology (Prof. Xianren Zhang(张现仁教授)'s group,2010.09-2017.07),  
+								of Chemical Technology (Prof. Xianren Zhang's group,2010.09-2017.07),  
 								and a visiting PhD student at the University of Cambridge (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>,2014.11-2016.11).
 								(<a href="files/CV_yawei.pdf">中文简历</a>) <br />
 								<a href=https://orcid.org/0000-0002-0230-0109>ORCID</a>
