--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Phoretic Transports</h2>
+							<h2>Phoretic Transport</h2>
 							<p>
 								Phoretic transport represents the motion of colloids/molecules in fluids and the fluid 
 								flow near solid surfaces induced by a electric field, a concentration gradient or  a temperature 
