--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 							<h2>Biographical details</h2>
 							<p class="major">
 								I am a Postdoctoral Researcher at the University of Sydney 
-								(<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Dr. Asaph Widmer-Cooper's group</a>,2017.09-). 
+								(<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Dr. Asaph Widmer-Cooper's group</a>,2017.9-). 
 								Prior to this I was a Master/PhD student at Beijing University 
-								of Chemical Technology (Prof. Xianren Zhang's group,2010.09-2017.07),  
+								of Chemical Technology (Prof. Xianren Zhang's group,2010.9-2017.7),  
 								and a visiting PhD student at the University of Cambridge (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>,2014.11-2016.11).
 								(<a href="files/CV_yawei.pdf">中文简历</a>) <br />
 								<a href=https://orcid.org/0000-0002-0230-0109>ORCID</a>
@@ -308,7 +308,7 @@
 								
 								<section>
 									<span class="icon solid style2 major fa-users"></span>
-									<h3><a href=>Academic Tree</a></h3>
+									<h3><a href=academic_tree/index.html>Academic Tree</a></h3>
 									<p>
 									</p>
 								</section>
@@ -326,10 +326,10 @@
 							<li><span class="fab fa-weixin"> </span></li> <br />
 							<img src="" alt="订阅号 to be lunched" />
 						</ul>
-						<p>&copy; 2021 Yaiwei Liu. Images: Any image presented in this website may be subject 
+						<p>&copy; 2021 Yaiwei Liu. All rights reserved. Images: Any image presented in this website may be subject 
 							to copyright and remain the property of their respective owners. 
 							No copyright infringement intended. If you hold the copyright to a 
-							specific photograph and do not wish to have the photo appear on this blog, 
+							specific photograph and do not wish to have the photo appear on this website, 
 							email to <a href="mailto:liuywah@gmail.com">liuywah@gmail.com</a> and the photo will be removed.
 							Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</div>
