--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 							<h1>Dr Yawei Liu (刘亚伟)</h1>
 							<h2>Biographical details</h2>
 							<p class="major">
-								I am a Postdoctoral Researcher at the University of Sydney 
-								(<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Dr. Asaph Widmer-Cooper's group</a>,2017.9-). 
+								I work at the University of Sydney as a Postdoctoral Researcher since 2017.9
+								(<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Dr. Asaph Widmer-Cooper's group</a>). 
 								Prior to this I was a Master/PhD student at Beijing University 
-								of Chemical Technology (Prof. Xianren Zhang's group,2010.9-2017.7),  
-								and a visiting PhD student at the University of Cambridge (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>,2014.11-2016.11).
+								of Chemical Technology during 2010.9-2017.7 (Prof. Xianren Zhang's group),  
+								and a visiting PhD student at the University of Cambridge during 2014.11-2016.11 (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>).
 								(<a href="files/CV_yawei.pdf">中文简历</a>) <br />
 								<a href=https://orcid.org/0000-0002-0230-0109>ORCID</a>
 								<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a> 
