--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -46,7 +46,7 @@
 								<div class="inner">
 									<h2>Prof. Xianren Zhang (张现仁教授)</h2>
 									<h3>Beijing University of Chemical Technology (北京化工大学)</h3>
-									<h4>During 2010.9-2017.7, I was a Mater/PhD student in Prof. Xianren Zhang's group.</h4>
+									<h4>During 2010.9-2017.7, I was a Master/PhD student in Prof. Xianren Zhang's group.</h4>
 									<p></p>
 									<ul class="actions">
 										<li><a href="https://chem.buct.edu.cn/2019/1217/c5531a70812/page.htm" class="button">Learn more</a></li>
