--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -107,7 +107,7 @@
 								<div class="inner">
 									<h2>Prof. Zhongyi Jiang (姜忠义教授)</h2>
 									<h3>Tianjin University (天津大学)</h3>
-									<h4>2019-</h4>
+									<h4>Collaborator</h4>
 									<p></p>
 									<ul class="actions">
 										<li><a href="http://chemeng.tju.edu.cn/cn/szdw;jsessionid=D2AD4722B294BDF1B963A67181F291D3?type=detail&id=174" class="button">Learn more</a></li>
