--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -41,7 +41,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>
+							<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
 								<div class="inner">
 									<h2>Prof. Xianren Zhang (张现仁教授)</h2>
@@ -55,7 +55,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="center center" /></a>
+							<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
 								<div class="inner">
 									<h2>Prof. Wenchuan Wang (汪文川教授)</h2>
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="center center" /></a>
+							<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
 								<div class="inner">
 									<h2>Prof. Daan Frenkel</h2>
@@ -84,7 +84,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="25% 25%" /></a>
+							<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
 								<div class="inner">
 									<h2>Dr. Asaph Widmer-Cooper</h2>
@@ -99,10 +99,12 @@
 						</section>
 					</section>
 
+					<br />
+
 				<!-- Two -->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
 								<div class="inner">
 									<h2>Prof. Zhongyi Jiang (姜忠义教授)</h2>
