--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -74,7 +74,7 @@
 								<div class="inner">
 									<h2>Prof. Daan Frenkel</h2>
 									<h3>University of Cambridge</h3>
-									<h4>During 2014.11-2016.11, I was a Visiting PhD student in Prof. Daan Frenkel's group.</h4>
+									<h4>During 2014.11-2016.11, I was a visiting PhD student in Prof. Daan Frenkel's group.</h4>
 									<p>
 									</p>
 									<ul class="actions">
