--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -60,7 +60,7 @@
 								<div class="inner">
 									<h2>Prof. Wenchuan Wang (汪文川教授)</h2>
 									<h3>Beijing University of Chemical Technology (北京化工大学)</h3>
-									<h4>Since 2012, Prof. Wenchuan Wang help me a lot in my academic carrer.</h4>
+									<h4>Prof. Wenchuan Wang help me a lot in my academic carrer.</h4>
 									<p></p>
 									<ul class="actions">
 										<li><a href="https://baike.baidu.com/item/%E6%B1%AA%E6%96%87%E5%B7%9D" class="button">Learn more</a></li>
