--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 						<div class="inner">
 							<h2>Selected Publications</h2>
 							<h3>We have published 34 papers in jounrals including Phys. Rev. Lett., Adv. Funct. Mater., J. Chem. Phys., etc.
-								None of these work I can finish on my own. I want to express my heartfelt thanks to all of my supervisors 
-								(Prof. Daan Frenkel, Prof.Xianren Zhang, Dr. Asaph Widmer-cooper) 
-								and collaborators for letting me be a part of these great work. 
+								None of these work I can finish on my own. I want to express my heartfelt thanks to my supervisors - 
+								Prof. Daan Frenkel, Prof.Xianren Zhang, Dr. Asaph Widmer-cooper - 
+								and all collaborators, for letting me be a part of these great work. 
 								Special acknowledgment is given to Prof. Wenchuan Wang who always help me a lot.
 							</h3>
 						</div>
