--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#one">Mentors (Sort by time)</a></li>
+							<li><a href="#one">Supervisors (Sort by time)</a></li>
 							<li><a href="#two">Collaborators (Sort by time)</a></li>
 							<li><a href="../index.html">HOME</a></li>
 						</ul>
@@ -50,20 +50,6 @@
 									<p></p>
 									<ul class="actions">
 										<li><a href="https://chem.buct.edu.cn/2019/1217/c5531a70812/page.htm" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>-->
-							<div class="content">
-								<div class="inner">
-									<h2>Prof. Wenchuan Wang (汪文川教授)</h2>
-									<h3>Beijing University of Chemical Technology (北京化工大学)</h3>
-									<h4>Prof. Wenchuan Wang help me a lot in my academic carrer.</h4>
-									<p></p>
-									<ul class="actions">
-										<li><a href="https://baike.baidu.com/item/%E6%B1%AA%E6%96%87%E5%B7%9D" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
