--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
 						<div class="inner">
 							<h2>Selected Publications</h2>
 							<h3>We have published 34 papers in jounrals including Phys. Rev. Lett., Adv. Funct. Mater., J. Chem. Phys., etc.
-								None of these work I can finish on my own. I want to express my heartfelt thanks to my supervisors - 
+							</h3>
+							<h4>None of these work I can finish on my own. I want to express my heartfelt thanks to my supervisors - 
 								Prof. Daan Frenkel, Prof.Xianren Zhang, Dr. Asaph Widmer-cooper - 
 								and all collaborators, for letting me be a part of these great work. 
-								Special acknowledgment is given to Prof. Wenchuan Wang who always help me a lot.
-							</h3>
+								Special acknowledgment is given to Prof. Wenchuan Wang who always helps me a lot.
+							</h4>
 						</div>
 
 						<!-- Gallery -->
