--- a/index.html
+++ b/index.html
@@ -134,9 +134,8 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Selected Publications</h2>
-							<h3>We have published 34 papers in jounrals including Phys. Rev. Lett., Adv. Funct. Mater., J. Chem. Phys., etc.
-							</h3>
+							<!--<h2>Selected Publications</h2>-->
+							<h2>We have published 34 papers in jounrals including Phys. Rev. Lett., Adv. Funct. Mater., J. Chem. Phys., etc.</h2>
 							<h4>None of these work I can finish on my own. I want to express my heartfelt thanks to my supervisors - 
 								Prof. Daan Frenkel, Prof.Xianren Zhang, Dr. Asaph Widmer-cooper - 
 								and all collaborators, for letting me be a part of these great work. 
