--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						<div class="inner">
 							<!--<h2>Selected Publications</h2>-->
 							<h2>34 papers have been published in jounrals including Phys. Rev. Lett., Adv. Funct. Mater., J. Chem. Phys., etc.</h2>
-							<h4>None of these work I can finish on my own. I want to express my heartfelt thanks to my supervisors - 
+							<h4>I want to express my heartfelt thanks to my supervisors - 
 								Prof. Daan Frenkel, Prof. Xianren Zhang, Dr. Asaph Widmer-cooper - 
 								and all collaborators, for letting me be a part of these great work. 
 								Special acknowledgment is given to Prof. Wenchuan Wang who always helps me a lot.
