--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 							view <span id="busuanzi_value_site_pv">       </span> times
 						</span>
 
-						<p>&copy; 2021 Yaiwei Liu. All rights reserved. Images: Any image presented in this website may be subject 
+						<p>&copy; 2021 Yawei Liu. All rights reserved. Images: Any image presented in this website may be subject 
 							to copyright and remain the property of their respective owners. 
 							No copyright infringement intended. If you hold the copyright to a 
 							specific photograph and do not wish to have the photo appear on this website, 
