--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -111,7 +111,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; 2021 Yaiwei Liu. All rights reserved. <ba/>
+						<li>&copy; 2021 Yawei Liu. All rights reserved. <ba/>
 							Images: Any image presented in this website may be subject 
 							to copyright and remain the property of their respective owners. 
 							No copyright infringement intended. If you hold the copyright to a 
