--- a/index.html
+++ b/index.html
@@ -319,26 +319,25 @@
 						<div class="inner">
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon solid style2 major fa-bars"></span>
+									<a href=publications/publications_list.html><span class="icon solid style2 major fa-bars"></span></a>
 									<h3><a href=publications/publications_list.html>Publications</a></h3>
 									<p>
-										
 									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chalkboard-teacher"></span>
-									<h3><a href=>Presentations & Posters</a></h3>
+									<h3>Presentations & Posters</h3>
 									<p>
 									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync"></span>
-									<h3><a href=>Academic Activies</a></h3>
+									<h3>Academic Activies</h3>
 									<p>
 									</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-edit"></span>
+									<a href=research_notes/index.html><span class="icon solid style2 major fa-edit"></span></a>
 									<h3><a href=research_notes/index.html>Research Notes</a></h3>
 									<p>
 
@@ -346,13 +345,13 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-drafting-compass"></span>
-									<h3><a href=>Resources</a></h3>
+									<h3>Resources</h3>
 									<p>
 									</p>
 								</section>
 								
 								<section>
-									<span class="icon solid style2 major fa-users"></span>
+									<a href=academic_tree/index.html><span class="icon solid style2 major fa-users"></span></a>
 									<h3><a href=academic_tree/index.html>Academic Tree</a></h3>
 									<p>
 									</p>
