--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
 						<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 						<span id="busuanzi_container_site_pv" style='display:none'>
-							view <span id="busuanzi_value_site_pv">       </span> times
+							view <span id="busuanzi_value_site_uv">       </span> times
 						</span>
 
 						<p>&copy; 2021 Yawei Liu. All rights reserved. Images: Any image presented in this website may be subject 
