--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<p>
 								Self-assembly describes the processes by which individual units come together to form organized 
 								structures, mediated by individual particle interactions or globally applied external forces such 
-								as electric/magnetic fields or fluid flow. Understanding self-assembly allows us to fabricate 
+								as electric/magnetic fields or fluid flows. Understanding self-assembly allows us to fabricate 
 								materials through a bottom–up approach, which provide a precise control on the structures to achieve 
 								desired properties.
 							</p>
